Add CircleCI fo CI CD

--- a/RxSwiftTrial/Base.lproj/Main.storyboard
+++ b/RxSwiftTrial/Base.lproj/Main.storyboard
@@ -88,6 +88,47 @@
             </objects>
             <point key="canvasLocation" x="1936.2318840579712" y="70.982142857142847"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="qt2-5U-rsW">
+            <objects>
+                <viewController id="rAM-FN-rAF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wfl-Ee-Lbh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MuJ-Qh-ITv">
+                                <rect key="frame" x="16" y="198" width="382" height="500"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XD0-88-wAU">
+                                        <rect key="frame" x="16" y="150" width="350" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="500" id="2r3-LF-xPY"/>
+                                    <constraint firstItem="XD0-88-wAU" firstAttribute="top" secondItem="MuJ-Qh-ITv" secondAttribute="top" constant="150" id="DtQ-D9-DOK"/>
+                                    <constraint firstItem="XD0-88-wAU" firstAttribute="leading" secondItem="MuJ-Qh-ITv" secondAttribute="leading" constant="16" id="IAD-rS-kik"/>
+                                    <constraint firstAttribute="trailing" secondItem="XD0-88-wAU" secondAttribute="trailing" constant="16" id="fL7-Fl-1Cn"/>
+                                    <constraint firstAttribute="bottom" secondItem="XD0-88-wAU" secondAttribute="bottom" constant="329" id="lrT-qA-nkL"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="yEK-TP-ez8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="MuJ-Qh-ITv" firstAttribute="leading" secondItem="yEK-TP-ez8" secondAttribute="leading" constant="16" id="CAz-aO-Tur"/>
+                            <constraint firstItem="yEK-TP-ez8" firstAttribute="trailing" secondItem="MuJ-Qh-ITv" secondAttribute="trailing" constant="16" id="MJw-zc-2Ya"/>
+                            <constraint firstItem="MuJ-Qh-ITv" firstAttribute="centerY" secondItem="Wfl-Ee-Lbh" secondAttribute="centerY" id="pdB-oi-taR"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nmj-bh-iDX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2827" y="66"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="ncy-KR-Jdm">
             <objects>
